--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -3,9 +3,13 @@
     justify-content: space-between;
     align-items: center;
     padding: 30px 0 0;
+    z-index: 1;
 }
 
-.header__logo {}
+.header__logo {
+    position: relative;
+    z-index: 3;
+}
 
 .header__logo-img {
     width: 100%;
@@ -37,9 +41,111 @@
     padding: 0;
 }
 
+.header__menu-link:hover {
+    opacity: .5;
+}
+
+.header__container {
+    max-width: 1110px;
+    margin: 0 auto;
+}
+
+.header__burger {
+    width: 20px;
+    height: 20px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    z-index: 3;
+}
+
+.header__burger::before,
+.header__burger::after {
+    content: '';
+}
+
+.header__burger-line,
+.header__burger::before,
+.header__burger::after {
+    left: 0;
+    margin: 0;
+    display: inline-block;
+    position: absolute;
+    height: 15%;
+    width: 100%;
+    background-color: #ffffff;
+    transition: all .5s ease-in;
+    opacity: 1;
+}
+
+.header__burger-line {}
+
+.header__burger::before {
+    top: 0;
+}
+
+.header__burger::after {
+    bottom: 0;
+}
+
+.header__burger.active .header__burger-line {
+    background-color: inherit;
+}
+
+.header__burger.active::before {
+    transform: rotate(-45deg);
+    top: 44%
+}
+
+.header__burger.active::after {
+    transform: rotate(45deg);
+    bottom: 40%;
+}
+
 @media screen and (max-width:1135px) {
     .header {
         padding-left: 20px;
         padding-right: 20px;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .header {
+        position: relative;
+    }
+    .header__nav {
+        z-index: 2;
+        position: fixed;
+        height: 100vh;
+        top: 20%;
+        right: -100%;
+        width: 60%;
+        background-color: #242B33;
+        transition: all .5s ease-in;
+        visibility: hidden;
+    }
+    .header__menu {
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        font-weight: normal;
+        position: relative;
+        width: 100%;
+        height: 50%;
+    }
+    .header__nav.active {
+        right: 0;
+        visibility: visible;
+    }
+    .header__menu-link {
+        font-size: 30px;
+        line-height: 1.2px;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width:320px) {
+    .header__nav {
+        width: 100%;
     }
 }
