--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -5,3 +5,4 @@
 @import url(../blocks/header/header.css );
 @import url(../blocks/main/main.css);
 @import url(../blocks/body.css);
+@import url(../blocks/tests/tests.css);
